--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+spring.database.name=Student_Database_System
 spring.datasource.url=jdbc:mysql://localhost:3306/student_managementsystem
 spring.datasource.username=Saurabh
 spring.datasource.password=S@07112000m
